@@ -1,0 +1,6 @@
+import FWCore.ParameterSet.Config as cms
+
+EvFFEDSelector = cms.EDProducer( "EvFFEDSelector",
+                                 fedList = cms.vuint32(812,1023)
+)
+
